--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Priyanshu8709.github.io/Shopping-cart-React",
+  "homepage": "https://Priyanshu8709.github.io/Shopping-cart-React/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
